@@ -9,7 +9,7 @@
   <bookinfo>
     <title>VIPS Reference Manual</title>
     <releaseinfo>
-      For VIPS 8.0.2.
+      For VIPS 8.0.3.
       The latest version of this documentation can be found on the 
       <ulink role="online-location"
         url="http://www.vips.ecs.soton.ac.uk/index.php?title=Documentation">VIPS website</ulink>.
