@@ -1236,6 +1236,7 @@ layer_strip_arrived( Layer *layer )
 	int result;
 	VipsRect new_strip;
 	VipsRect overlap;
+	VipsRect image_area;
 
 	if( write->tile ) 
 		result = layer_write_tile( write, layer, layer->strip );
@@ -1245,7 +1246,7 @@ layer_strip_arrived( Layer *layer )
 		return( -1 );
 
 	if( layer->below &&
-		layer_strip_shrink( layer ) )
+		layer_strip_shrink( layer ) ) 
 		return( -1 );
 
 	/* Position our strip down the image.  
@@ -1258,6 +1259,13 @@ layer_strip_arrived( Layer *layer )
 	new_strip.top = layer->y;
 	new_strip.width = layer->image->Xsize;
 	new_strip.height = write->tileh;
+
+	image_area.left = 0;
+	image_area.top = 0;
+	image_area.width = layer->image->Xsize;
+	image_area.height = layer->image->Ysize;
+	vips_rect_intersectrect( &new_strip, &image_area, &new_strip ); 
+
 	if( (new_strip.height & 1) == 1 )
 		new_strip.height += 1;
 
@@ -1272,14 +1280,16 @@ layer_strip_arrived( Layer *layer )
 			&overlap, overlap.left, overlap.top );
 	}
 
-	if( vips_region_buffer( layer->strip, &new_strip ) )
-		return( -1 );
+	if( !vips_rect_isempty( &new_strip ) ) {
+		if( vips_region_buffer( layer->strip, &new_strip ) ) 
+			return( -1 );
 
-	/* And copy back again.
-	 */
-	if( !vips_rect_isempty( &overlap ) ) 
-		vips_region_copy( layer->copy, layer->strip, 
-			&overlap, overlap.left, overlap.top );
+		/* And copy back again.
+		 */
+		if( !vips_rect_isempty( &overlap ) ) 
+			vips_region_copy( layer->copy, layer->strip, 
+				&overlap, overlap.left, overlap.top );
+	}
 
 	return( 0 );
 }
