@@ -1,4 +1,5 @@
 7/5/15 started 8.0.3
+- dzsave and tif pyr write could fail for some image dimensions, thanks Jonas
 
 4/5/15 started 8.0.2
 - fix a refcount error in C++ wrapper, thanks huskier
